--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.23.0",
     "zustand": "^4.5.2"
   },
